data/all_generated_tests/raw_wast_tests/br_if_InfiniteLoops_1599.wast
;; 10. Create an infinite loop scenario where a backward branch (`br_if`) condition appears to depend on previous loop iterations' stack status. If `wizard_engine` doesn't accurately track and reference control entry states, it can misinterpret the condition, leading to an infinite loop.

(assert_invalid
  (module
    (func $infinite-loop (loop (br_if 0 (i32.const 1)) (br 0)))
  )
  "type mismatch"
)